--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 <div id="custom-bootstrap-menu" class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
       <div class="navbar-header">
-          <%= link_to 'TR', root_path, class: 'navbar-brand' %>
+          <%= link_to(root_path, :class=>"navbar-brand tr-logo-link") do %>
+              <%=image_tag 'tr.png',  :class => 'tr-logo', height: 30 %>
+          <% end %>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-menubuilder"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
           </button>
       </div>
